welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:3: error: '{' expected but 'case' found.
  	case num if num == 1 => 1
        ^golomb:4: error: '}' expected but 'case' found.
  	case num if num == 2 => 2
        ^golomb:5: error: illegal start of definition
  	case _ => terme(num)
        ^golomb:8: error: expected class or object definition
def terme(num){
^golomb:17: error: eof expected but '}' found.
 }
 ^